<resources>
    <string name="app_name">Habit Tracker</string>
    <string name="action_delete_all_entries">Delete All Entires</string>
    <string name="editor_activity_title_new_activity">Add an Activity</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_insert_activity_successful">Activity saved</string>
    <string name="editor_insert_activity_failed">Error with saving activity</string>
    <string name="category_activity">Activity</string>
    <string name="category_zone">Day\'\s Zone</string>
    <string name="category_timing">Number of hours</string>
    <string name="hint_pet_name">Name</string>
    <string name="hint_hours">Hours</string>
    <string name="unit_h">h.</string>
    <string name="zone_work">Work</string>
    <string name="zone_rest">Rest</string>
    <string name="zone_fun">Fun</string>

</resources>
